fix: show newest messages at the bottom

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   height: 100%;
   overflow: scroll;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
 }
 
 .chat-room {
