--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,58 @@
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  justify-content: center;
+}
+
+.sign-up {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 20%;
+  height: 100%;
+  background-color: #333;
+}
+
+.sidebar li:hover:not(.active) {
+  background-color: #555;
+  color: white;
+}
 
 .chat-container {
+  margin-left: 20%;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
+  height: 100vh;
+  width: 80%;
+  border: red 1px solid;
+  overflow: hidden;
 }
 
 .chat-container > div {
   border: 1px solid #000;
-  height: 80vh;
+  height: 90%;
 }
 
 .messages {
   height: 100%;
   overflow: scroll;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
 }
 
-.chat-room {
+#chat-room {
   display: flex;
+  width: 50%;
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-end;
